[package]
name = "arc_api_rs"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
reqwest = { version=">=0.13.1",features=["json","gzip","query","brotli","deflate"] }
tokio = { version="1",features=["time","macros","rt-multi-thread"] }
serde = { version="1",features=["derive"] }
serde_json = ">=1.0"
thiserror = ">=2.0.18"
governor = ">=0.10.4"
uuid = { version = "1.20.0", features = ["serde", "v4"] }
time = { version = "0.3.46", features = ["serde", "parsing", "formatting"]}
time-macros = "0.2.26"
url = { version = "2", features = ["serde"] }

[dev-dependencies]
wiremock = ">=0.5.9"
