[package]
name = "arc_api_rs"
version = "0.2.1"
edition = "2024"
license = "MIT"
description = "Async Rust client for the MetaForge Arc Raiders API"
repository = "https://github.com/Dakota-LM/arc_api_rs"
homepage = "https://github.com/Dakota-LM/arc_api_rs"
documentation = "https://docs.rs/arc_api_rs"
keywords = ["arc-raiders", "metaforge", "gaming", "api-client", "async"]
categories = ["api-bindings", "games"]
readme = "README.md"

[dependencies]
reqwest = { version=">=0.13.1",features=["json","gzip","query","brotli","deflate"] }
tokio = { version="1",features=["time","macros","rt-multi-thread"] }
serde = { version="1",features=["derive"] }
serde_json = ">=1.0"
thiserror = ">=2.0.18"
governor = ">=0.10.4"
uuid = { version = ">=1.21.0", features = ["serde", "v4"] }
time = { version = ">=0.3.47", features = ["serde", "parsing", "formatting"]}
time-macros = ">=0.2.27"
url = { version = "2", features = ["serde"] }

[dev-dependencies]
wiremock = ">=0.5.9"
